Fix crash in ApplyStyleCommand::applyRelativeFontStyleChange() https://bugs.webkit.org/show_bug.cgi?id=149300 <rdar://problem/22747046>

Patch by Jiewen Tan <jiewen_tan@apple.com> on 2015-10-06
Reviewed by Chris Dumez.

Source/WebCore:

This is a merge of Blink r167845 and r194944:
https://codereview.chromium.org/177093016
https://codereview.chromium.org/1124863003

Test: editing/style/apply-style-crash2.html
      editing/style/apply-style-crash3.html

* editing/ApplyStyleCommand.cpp:
(WebCore::ApplyStyleCommand::applyRelativeFontStyleChange):
The issue was that we would traverse the DOM tree past the beyondEnd
under some circumstances and thus NodeTraversal::next() would return
null unexpectedly. This CL adds a check to make sure startNode != beyondEnd
before traversing to avoid the problem.

Besides that, this CL hardens changing font style over unknown elements.
When adjusting the start node position of where to apply a font style
command, check that we haven't stepped off the end.

This CL also adds a few more assertions to catch similar issues
more easily in the future.

LayoutTests:

* editing/style/apply-style-crash2-expected.txt: Added.
* editing/style/apply-style-crash2.html: Added.
* editing/style/apply-style-crash3-expected.txt: Added.
* editing/style/apply-style-crash3.html: Added.

Canonical link: https://commits.webkit.org/167980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190634 268f45cc-cd09-0410-ab3c-d52691b4dbfc